traefik-google-oauth/12-oauth-services.yaml
kind: Service
apiVersion: v1
metadata:
  name: traefik-forward-auth-service
  namespace: default
spec:
  selector:
    app: traefik-forward-auth
  ports:
    - port: 80
      targetPort: 4181
      protocol: TCP
