traefik-google-oauth/14-oauth-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-forward-auth-ingress-websecure
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`auth.<EXAMPLE.COM>`)
    kind: Rule
    priority: 1
    middlewares:
    - name: google-oauth
    services:
    - name: traefik-forward-auth-service
      port: 80
  tls:
    certResolver: default
